# cmake_course

./: README.md
10_ex_input_options/: CMakeLists.txt  main.c
11_ex_cmake_debug/: CMakeLists.txt
11_ex_cmake_debug/print_lib/: CMakeLists.txt
1_ex_executable/: CMakeLists.txt
2_ex_library_linking/: CMakeLists.txt
2_ex_library_linking/print_lib/inc/: print.h
3_ex_library_linking_w_add_subdirectory/: CMakeLists.txt
4_ex_interface_library/: CMakeLists.txt  main.c
4_ex_interface_library/print_lib/: CMakeLists.txt
4_ex_interface_library/print_lib/src/: print.c
4_ex_interface_library/print_lib_config/: CMakeLists.txt
4_ex_interface_library/print_lib_config/inc/: print_config.h
5_ex_scope/: CMakeLists.txt
5_ex_scope/print_lib/: print_lib.cmake
5_ex_scope/print_lib/src/: print.c
6_ex_file_config/: README.md  header_version.h.in  main.c
7_ex_functions/: CMakeLists.txt  main.c
7_ex_functions/functions/: header_version.h.in  version.cmake
8_ex_variables/: CMakeLists.txt
9_ex_link_keywords/: CMakeLists.txt
9_ex_link_keywords/print_lib/: CMakeLists.txt
9_ex_link_keywords/print_lib/src/: print_1.c  print_2.c  print_3.c
